<resources>
    <string name="app_name">Okmányirodai Ügyintéző Felület</string>
    <string name="login_text">Bejelentkezés</string>
    <string name="password_text">Jelszó</string>
    <string name="register_text">Regisztráció</string>
    <string name="not_registered_text">Nincs még fiókja?</string>
    <string name="password_confirm_text">Jelszó megerősítése</string>
    <string name="full_name_text">Teljes név</string>
    <string name="phone_number_text">Telefonszám</string>
    <string name="email_address_text">E-mail cím</string>
    <string name="address_text">Lakcím</string>
    <string name="cancel_text">Vissza</string>
    <string name="reservation_title">Foglaljon időpontot a következő ügyek intézésére</string>
    <string name="calendar_photo">Naptár kép</string>
    <string name="task1">Személyi igazolvány cseréje</string>
    <string name="task2">Vezetői engedély cseréje</string>
    <string name="task3">Forgalmi engedély cseréje</string>
    <string name="task4">Lakcímváltozás bejelentése</string>
    <string name="task5">Útlevél kiadása, pótlása</string>
    <string name="input_info_text">Adja meg az adatait</string>
    <string name="logout_text">Kijelentkezés</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="userdetails_string">Profiladatok</string>
    <string name="modify_string">Módosítás</string>
    <string name="reserve_task_string">Időpont foglalása</string>
    <string name="task_todo_string">Intézendő ügy</string>
    <string name="reserve_text">Foglalás</string>
    <string name="choose_time_string">Válasszon ki egy időpontot!</string>
    <string name="choose_office_string">Válasszon ki egy okmányirodát!</string>
    <string name="office">Okmányiroda</string>
    <string name="date">Dátum</string>
    <string name="add_date">Adja meg a dátumot</string>
</resources>