<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/backgroundAppColor"
        android:scrollbars="vertical"
        tools:context=".ReservationActivity">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:minHeight="@dimen/min_height"
            android:layout_margin="@dimen/small_margin"
            android:onClick="cancel"
            android:text="@string/cancel_text"
            android:textColor="@color/secondaryAppColor"
            android:textSize="@dimen/normal_text_size"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/small_margin"
            android:text="@string/full_name_text"
            android:textColor="@color/secondaryAppColor"
            android:textSize="@dimen/normal_text_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <ImageView
            android:id="@+id/calendar"
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:contentDescription="@string/calendar_photo"
            app:layout_constraintBottom_toTopOf="@+id/titleTextView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            app:layout_constraintVertical_bias="0.519"
            app:srcCompat="@drawable/calendar" />

        <TextView
            android:id="@+id/titleTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/reservation_title"
            android:textAlignment="center"
            android:textColor="@color/secondaryAppColor"
            android:textSize="@dimen/normal_text_size"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.471" />

        <Button
            android:id="@+id/button1"
            android:layout_width="@dimen/login_button_margin"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/primaryAppColor"
            android:text="@string/task1"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button2" />

        <Button
            android:id="@+id/button2"
            android:layout_width="@dimen/login_button_margin"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/primaryAppColor"
            android:text="@string/task2"
            android:textColor="@color/white"
            app:layout_constraintBottom_toTopOf="@+id/button1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button3" />

        <Button
            android:id="@+id/button3"
            android:layout_width="@dimen/login_button_margin"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/primaryAppColor"
            android:text="@string/task3"
            android:textColor="@color/white"
            app:layout_constraintBottom_toTopOf="@+id/button2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button4" />

        <Button
            android:id="@+id/button4"
            android:layout_width="@dimen/login_button_margin"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/primaryAppColor"
            android:text="@string/task4"
            android:textColor="@color/white"
            app:layout_constraintBottom_toTopOf="@+id/button3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button5" />

        <Button
            android:id="@+id/button5"
            android:layout_width="@dimen/login_button_margin"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/primaryAppColor"
            android:text="@string/task5"
            android:textColor="@color/white"
            app:layout_constraintBottom_toTopOf="@+id/button4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/titleTextView" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>