<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:fitsSystemWindows="true">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/backgroundColor"
        tools:context=".MainActivity">

        <FrameLayout
            android:id="@+id/topSegment"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="?attr/colorPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.35"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/basic_margin"
                android:gravity="center|bottom"
                android:text="@string/app_name"
                android:textColor="?attr/backgroundColor"
                android:textSize="@dimen/title_text_size"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/usernameEditText"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </FrameLayout>

        <EditText
            android:id="@+id/emailEditText"
            android:layout_width="@dimen/login_field_margin"
            android:layout_height="wrap_content"
            android:autofillHints="emailAddress"
            android:backgroundTint="?attr/colorPrimary"
            android:hint="@string/email_address_text"
            android:inputType="textEmailAddress"
            android:minHeight="@dimen/min_height"
            android:textColor="?attr/colorSecondary"
            android:textColorHint="?attr/hintTextColor"
            android:textSize="@dimen/normal_text_size"
            app:layout_constraintBottom_toTopOf="@+id/passwordEditText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/topSegment"/>

        <EditText
            android:id="@+id/passwordEditText"
            android:layout_width="@dimen/login_field_margin"
            android:layout_height="wrap_content"
            android:autofillHints="password"
            android:backgroundTint="?attr/colorPrimary"
            android:hint="@string/password_text"
            android:inputType="textPassword"
            android:minHeight="@dimen/min_height"
            android:textColor="?attr/colorSecondary"
            android:textColorHint="?attr/hintTextColor"
            android:textSize="@dimen/normal_text_size"
            app:layout_constraintBottom_toTopOf="@+id/loginButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/emailEditText"
            app:layout_constraintVertical_bias="0.454" />

        <ProgressBar
            android:id="@+id/loginProgressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:indeterminate="true"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@id/loginButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/passwordEditText" />

        <Button
            android:id="@+id/loginButton"
            android:layout_width="@dimen/login_button_margin"
            android:layout_height="wrap_content"
            android:backgroundTint="?attr/colorPrimary"
            android:onClick="login"
            android:text="@string/login_text"
            android:textColor="?attr/backgroundColor"
            android:textSize="@dimen/normal_text_size"
            app:layout_constraintBottom_toTopOf="@+id/notRegisteredTextView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/passwordEditText"
            app:layout_constraintVertical_bias="0.863" />

        <TextView
            android:id="@+id/notRegisteredTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/not_registered_text"
            android:textAlignment="center"
            android:textColor="?attr/colorSecondary"
            android:textSize="@dimen/small_text_size"
            app:layout_constraintBottom_toTopOf="@id/registerButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/loginButton"
            app:layout_constraintVertical_bias="0.829" />

        <Button
            android:id="@+id/registerButton"
            android:layout_width="@dimen/login_button_margin"
            android:layout_height="wrap_content"
            android:backgroundTint="?attr/colorPrimary"
            android:onClick="register"
            android:text="@string/register_text"
            android:textColor="?attr/backgroundColor"
            android:textSize="@dimen/normal_text_size"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/notRegisteredTextView"
            app:layout_constraintVertical_bias="0.0" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>