<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimary"
    tools:context=".CheckoutActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/topGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/bottomGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.9" />

    <ImageView
        android:id="@+id/cancelImageView"
        android:layout_width="@dimen/min_height"
        android:layout_height="@dimen/min_height"
        android:layout_marginStart="@dimen/small_margin"
        android:background="@drawable/back_arrow"
        android:backgroundTint="?attr/backgroundColor"
        android:contentDescription="@string/cancel_text"
        android:gravity="center"
        android:minHeight="@dimen/min_height"
        android:onClick="cancel"
        app:layout_constraintBottom_toTopOf="@id/topGuideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/taskTitle"
        android:layout_width="match_parent"
        android:layout_height="@dimen/min_height"
        android:text="@string/reserve_task_string"
        android:textAlignment="center"
        android:textColor="?attr/backgroundColor"
        android:textSize="@dimen/title_text_size"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/topGuideline"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="?attr/backgroundColor"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@id/bottomGuideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/topGuideline">

        <Space
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <LinearLayout
            android:id="@+id/row1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Space
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/taskTodoTextView"
                android:layout_width="@dimen/list_width"
                android:layout_height="@dimen/min_height"
                android:text="@string/task_todo_string"
                android:textAlignment="viewStart"
                android:textColor="?attr/colorPrimary"
                android:textSize="@dimen/normal_text_size" />

            <Space
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/taskTextView"
                android:layout_width="@dimen/list_width"
                android:layout_height="wrap_content"
                android:minHeight="@dimen/min_height"
                android:textColor="?attr/colorSecondary"
                android:textSize="@dimen/normal_text_size"
                android:textStyle="bold" />

            <Space
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

        </LinearLayout>

        <Space
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <LinearLayout
            android:id="@+id/row3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@id/row4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/row2">

            <Space
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/timeTextView"
                android:layout_width="@dimen/list_width"
                android:layout_height="@dimen/min_height"
                android:text="Időpont"
                android:textAlignment="viewStart"
                android:textColor="?attr/colorPrimary"
                android:textSize="@dimen/normal_text_size" />

            <Space
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <Spinner
                android:id="@+id/timeSpinner"
                android:layout_width="@dimen/list_width"
                android:layout_height="wrap_content"
                android:minHeight="@dimen/min_height"
                android:textColor="?attr/colorPrimary"
                android:textSize="@dimen/normal_text_size"
                android:textStyle="bold" />

            <Space
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

        </LinearLayout>

        <Space
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <LinearLayout
            android:id="@+id/row4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/row3">

            <Space
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/officeTextView"
                android:layout_width="@dimen/list_width"
                android:layout_height="@dimen/min_height"
                android:text="Okmányiroda"
                android:textAlignment="viewStart"
                android:textColor="?attr/colorPrimary"
                android:textSize="@dimen/normal_text_size" />

            <Space
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <Spinner
                android:id="@+id/officeSpinner"
                android:layout_width="@dimen/list_width"
                android:layout_height="wrap_content"
                android:minHeight="@dimen/min_height"
                android:textColor="?attr/colorPrimary"
                android:textSize="@dimen/normal_text_size"
                android:textStyle="bold" />

            <Space
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

        </LinearLayout>

        <Space
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <DatePicker
            android:id="@+id/datePicker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:minHeight="@dimen/min_height"
            android:textColor="?attr/colorPrimary"
            android:textSize="@dimen/normal_text_size"
            android:textStyle="bold" />

        <Space
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

    </LinearLayout>

    <Button
        android:layout_width="@dimen/login_field_margin"
        android:layout_height="@dimen/min_height"
        android:backgroundTint="?attr/backgroundColor"
        android:text="@string/reserve_text"
        android:textColor="?attr/colorPrimary"
        android:textSize="@dimen/normal_text_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bottomGuideline" />

</androidx.constraintlayout.widget.ConstraintLayout>